--- a/app/src/main/res/layout/activity_admin_home_page.xml
+++ b/app/src/main/res/layout/activity_admin_home_page.xml
@@ -449,7 +449,7 @@
                         android:orientation="horizontal">
 
                         <androidx.cardview.widget.CardView
-                            android:id="@+id/teachersInfoCard"
+                            android:id="@+id/admin_teachersInfoCard"
                             android:layout_width="100dp"
                             android:layout_height="150dp"
                             android:layout_weight="1"
