--- a/app/src/main/res/layout/activity_student_home_page.xml
+++ b/app/src/main/res/layout/activity_student_home_page.xml
@@ -185,7 +185,7 @@
                         android:textColor="#006A00" />
 
                     <TextView
-                        android:id="@+id/adminText"
+                        android:id="@+id/studentText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
@@ -252,7 +252,7 @@
                             android:layout_width="65dp"
                             android:layout_height="65dp"
                             android:layout_gravity="center_vertical"
-                            android:src="@drawable/admin_icon"
+                            android:src="@drawable/student_icon"
                             android:contentDescription="Status Icon" />
 
                         <LinearLayout
