--- a/app/src/main/res/layout/activity_cr_registertration.xml
+++ b/app/src/main/res/layout/activity_cr_registertration.xml
@@ -50,6 +50,27 @@
                 android:textColorHint="#808080"
                 android:inputType="textEmailAddress" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Student ID"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:textColor="#000000" />
+
+            <EditText
+                android:id="@+id/CRNameEditText"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="enter student Name"
+                android:background="@xml/edit_text_bg"
+                android:padding="12dp"
+                android:textColorHint="#808080"
+                 />
+
+
             <!-- Student ID -->
             <TextView
                 android:layout_width="wrap_content"
