--- a/app/src/main/res/layout/activity_admin_home_page.xml
+++ b/app/src/main/res/layout/activity_admin_home_page.xml
@@ -365,56 +365,8 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
-                <LinearLayout
-                    android:id="@+id/acceptedRejectedContainer"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginTop="16dp"
 
 
-                    app:layout_constraintTop_toBottomOf="@id/approvalCardView"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    >
-
-                    <!-- Toggle Buttons for Accepted/Rejected -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center">
-
-                        <Button
-                            android:id="@+id/acceptedButton"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Accepted"
-                            android:backgroundTint="@color/Theme_green"
-                            android:textColor="@android:color/white"
-                            android:layout_marginEnd="8dp" />
-
-                        <Button
-                            android:id="@+id/rejectedButton"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Rejected"
-                            android:backgroundTint="@color/Theme_Lightgreen"
-                            android:textColor="@android:color/white"
-                            android:layout_marginStart="8dp" />
-                    </LinearLayout>
-
-                    <!-- RecyclerView for Accepted/Rejected Requests -->
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/acceptedRejectedRecyclerView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:padding="16dp"
-                        android:scrollbars="vertical" />
-                </LinearLayout>
 
 
 
@@ -429,7 +381,7 @@
                     android:layout_marginTop="20dp"
                     android:src="@drawable/division"
                     android:contentDescription="@null"
-                    app:layout_constraintTop_toBottomOf="@id/acceptedRejectedContainer"
+                    app:layout_constraintTop_toBottomOf="@id/approvalCardView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
@@ -515,42 +467,24 @@
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/Divider3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/division"
-                    android:contentDescription="@null"
-                    app:layout_constraintTop_toBottomOf="@id/routineRoomLayout"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+
 
                 <LinearLayout
                     android:id="@+id/othersLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginTop="16dp"
-                    android:padding="8dp"
+                    android:layout_marginTop="10dp"
                     app:layout_constraintTop_toBottomOf="@id/routineRoomLayout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
-                    <TextView
-                        android:id="@+id/othersTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Others"
-                        android:textSize="18sp"
-                        android:textColor="@color/Theme_green"
-                        android:textStyle="bold"
-                        android:layout_marginBottom="8dp" />
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
-                        android:layout_marginBottom="20dp"
+                        android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
 
                         <androidx.cardview.widget.CardView
@@ -566,7 +500,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:orientation="horizontal"
-                                android:background="@drawable/card_bg_row"
+                                android:background="@color/Theme_green"
                                 android:gravity="center">
 
                                 <ImageView
@@ -584,9 +518,9 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginRight="15dp"
                                     android:text="Teachers Info"
-                                    android:textSize="20sp"
+                                    android:textSize="25sp"
                                     android:textAlignment="center"
-                                    android:textColor="@color/Theme_green"
+                                    android:textColor="@color/Theme_Lightgreen"
                                     android:textStyle="bold" />
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
@@ -604,14 +538,14 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:orientation="vertical"
-                                android:background="@color/Theme_green"
+                                android:background="@color/Theme_Lightgreen"
                                 android:gravity="center">
 
                                 <ImageView
                                     android:id="@+id/othersRoutineIcon"
                                     android:layout_width="60dp"
                                     android:layout_height="60dp"
-                                    android:src="@drawable/others_routine"
+                                    android:src="@drawable/map_icon"
                                     android:contentDescription="Others Routine Icon"
                                     android:layout_marginBottom="8dp" />
 
@@ -619,92 +553,16 @@
                                     android:id="@+id/othersRoutineText"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Others Routine"
-                                    android:textSize="16sp"
-                                    android:textColor="@color/white"
-                                    android:textStyle="bold" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="180dp"
-                        android:orientation="horizontal">
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/universityMapCard"
-                            android:layout_width="0dp"
-                            android:layout_height="150dp"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="16dp"
-                            app:cardElevation="8dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical"
-                                android:background="@color/Theme_green"
-                                android:gravity="center">
-
-                                <ImageView
-                                    android:id="@+id/universityMapIcon"
-                                    android:layout_width="60dp"
-                                    android:layout_height="60dp"
-                                    android:src="@drawable/map_icon"
-                                    android:contentDescription="University Map Icon"
-                                    android:layout_marginBottom="8dp" />
-
-                                <TextView
-                                    android:id="@+id/universityMapText"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
                                     android:text="University Map"
-                                    android:textSize="16sp"
-                                    android:textColor="@color/white"
-                                    android:textStyle="bold" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/upcomingTaskCard"
-                            android:layout_width="100dp"
-                            android:layout_height="150dp"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="16dp"
-                            app:cardElevation="8dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="horizontal"
-                                android:background="@drawable/card_bg_row"
-                                android:gravity="center">
-
-                                <ImageView
-                                    android:id="@+id/upcomingTaskIcon"
-                                    android:layout_width="100dp"
-                                    android:layout_height="100dp"
-                                    android:layout_marginLeft="15dp"
-                                    android:src="@drawable/task_icon"
-                                    android:contentDescription="Upcoming Task Icon"
-                                    android:layout_marginBottom="8dp" />
-
-                                <TextView
-                                    android:id="@+id/upcomingTaskText"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginRight="15dp"
-                                    android:text="Upcoming Task"
-                                    android:textSize="20sp"
-                                    android:textColor="@color/Theme_green"
                                     android:textAlignment="center"
+                                    android:textSize="25sp"
+                                    android:textColor="@color/Theme_green"
                                     android:textStyle="bold" />
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
                     </LinearLayout>
+
+
                 </LinearLayout>
 
                 <ImageView
@@ -712,7 +570,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
-                    android:layout_marginTop="10dp"
                     android:src="@drawable/division"
                     android:contentDescription="@null"
                     app:layout_constraintTop_toBottomOf="@id/othersLayout"
