--- a/app/src/main/res/layout/item_day_card.xml
+++ b/app/src/main/res/layout/item_day_card.xml
@@ -13,9 +13,13 @@
 
     <!-- A vertical container to stack your header (day name)
          and all the row layouts one below the other. -->
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -45,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:text="Class time"
+                android:text="09:00-10:20AM"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -54,6 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="6dp"
+                android:textAlignment="center"
                 android:text="Class details"
                 android:textColor="@color/Theme_green"
                 android:textSize="16sp"
@@ -74,7 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:text="Class time"
+                android:text="10:20-11:40AM"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -83,6 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="6dp"
+                android:textAlignment="center"
                 android:text="Class details"
                 android:textColor="@color/Theme_green"
                 android:textSize="16sp"
@@ -103,7 +109,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:text="Class time"
+                android:text="11:40-1:00PM"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -114,6 +120,7 @@
                 android:layout_marginBottom="6dp"
                 android:text="Class details"
                 android:textColor="@color/Theme_green"
+                android:textAlignment="center"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -132,7 +139,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:text="Class time"
+                android:text="1:00-1:30PM"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -141,7 +148,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="6dp"
-                android:text="Class details"
+                android:text="Break Time"
                 android:textColor="@color/Theme_green"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -161,7 +168,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:text="Class time"
+                android:text="1:30-2:50PM"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -171,6 +178,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="6dp"
                 android:text="Class details"
+                android:textAlignment="center"
                 android:textColor="@color/Theme_green"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -190,7 +198,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:text="Class time"
+                android:text="2:50-4:10PM"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -201,6 +209,7 @@
                 android:layout_marginBottom="6dp"
                 android:text="Class details"
                 android:textColor="@color/Theme_green"
+                android:textAlignment="center"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -219,7 +228,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:text="Class time"
+                android:text="7:00-8:20PM"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -231,8 +240,10 @@
                 android:text="Class details"
                 android:textColor="@color/Theme_green"
                 android:textSize="16sp"
+                android:textAlignment="center"
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
+    </ScrollView>
 
 </androidx.cardview.widget.CardView>
