--- a/app/src/main/res/layout/item_day_card.xml
+++ b/app/src/main/res/layout/item_day_card.xml
@@ -5,7 +5,8 @@
     android:id="@+id/dayCardView"
     android:layout_width="250dp"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="8dp"
     android:layout_gravity="center"
     card_view:cardUseCompatPadding="true"
     card_view:cardCornerRadius="12dp"
