--- a/app/src/main/res/layout/activity_cr_home_page.xml
+++ b/app/src/main/res/layout/activity_cr_home_page.xml
@@ -251,30 +251,68 @@
                             android:layout_marginLeft="5dp"
                             android:orientation="vertical">
 
-                            <TextView
-                                android:id="@+id/unknownText1"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text=" "
-                                android:textColor="#006A00"
-                                android:textSize="18sp" />
+
 
                             <TextView
                                 android:id="@+id/CR_nameText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="CR"
+                                android:text="Anindita"
                                 android:textColor="#006A00"
                                 android:textSize="18sp"
                                 android:textStyle="bold" />
 
-                            <TextView
-                                android:id="@+id/unknownText2"
+
+                            <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text=" "
-                                android:textColor="#006A00"
-                                android:textSize="18sp" />
+                                android:orientation="horizontal"
+                                app:layout_constraintTop_toBottomOf="@id/Divider"
+                                app:layout_constraintStart_toStartOf="parent">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Batch:"
+                                    android:textSize="18sp"
+                                    android:textColor="#006A00" />
+
+                                <TextView
+                                    android:id="@+id/tv_cr_batch"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="5dp"
+                                    android:text="59"
+                                    android:textSize="18sp"
+                                    android:textStyle="bold"
+                                    android:textColor="#006A00" />
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                app:layout_constraintTop_toBottomOf="@id/Divider"
+                                app:layout_constraintStart_toStartOf="parent">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Section:"
+                                    android:textSize="18sp"
+                                    android:textColor="#006A00" />
+
+                                <TextView
+                                    android:id="@+id/tv_cr_section"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="5dp"
+                                    android:text="B"
+                                    android:textSize="18sp"
+                                    android:textStyle="bold"
+                                    android:textColor="#006A00" />
+                            </LinearLayout>
+
+
                         </LinearLayout>
 
                         <LinearLayout
