--- a/app/src/main/res/layout/activity_others_routine.xml
+++ b/app/src/main/res/layout/activity_others_routine.xml
@@ -5,6 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/Layout_Background"
+    android:background="@color/Layout_Background"
 
     tools:context=".OthersRoutine">
 
@@ -114,11 +116,15 @@
             android:layout_marginStart="8dp"/>
     </LinearLayout>
 
+
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="90dp"
         app:layout_constraintTop_toBottomOf="@id/selectionRow">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -127,6 +133,16 @@
         app:layout_constraintTop_toBottomOf="@id/selectionRow"
         android:padding="16dp"
         >
+
+        <Button
+            android:id="@+id/btn1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="See calender and tasks"
+            android:textColor="@color/primaryDark"
+            app:layout_constraintStart_toStartOf="parent"
+            android:backgroundTint="@color/Theme_Lightgreen"
+            tools:ignore="MissingConstraints" />
 
 
 
@@ -139,9 +155,10 @@
         android:layout_marginHorizontal="5dp"
         app:cardElevation="4dp"
         app:cardCornerRadius="8dp"
+        app:layout_constraintTop_toBottomOf="@id/btn1"
 
 
-        app:layout_constraintStart_toStartOf="parent"
+
         tools:ignore="MissingConstraints">
 
         <LinearLayout
