--- a/app/src/main/res/layout/custom_calendar_day.xml
+++ b/app/src/main/res/layout/custom_calendar_day.xml
@@ -1,15 +1,28 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/dayCard"
     android:layout_width="40dp"
     android:layout_height="40dp"
-    android:gravity="center"
-    android:orientation="vertical">
+    card_view:cardCornerRadius="8dp"
+    android:padding="5dp"
+    card_view:cardElevation="2dp"
+    android:layout_margin="4dp"
+    card_view:cardBackgroundColor="@color/primaryDark"
+    >
 
     <TextView
         android:id="@+id/dayLabel"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:textSize="14sp"
-        android:background="@drawable/bg_drawer_rounded"/>
-
-</LinearLayout>
+        android:textColor="@android:color/black"/>
+    <!-- Event Indicator -->
+    <View
+        android:id="@+id/eventIndicator"
+        android:layout_width="16dp"
+        android:layout_height="4dp"
+        android:layout_marginTop="4dp"
+        android:visibility="invisible"/>
+</androidx.cardview.widget.CardView>
