--- a/app/src/main/res/layout/dialog_add_task.xml
+++ b/app/src/main/res/layout/dialog_add_task.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -22,6 +21,39 @@
         android:gravity="center"
         android:paddingBottom="12dp"
         android:textColor="@color/black" />
+
+    <!-- Selected Date -->
+    <TextView
+        android:id="@+id/taskDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Date: "
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:paddingBottom="5dp"
+        android:textColor="@color/primaryDark"/>
+
+    <!-- Selected Time Slot -->
+    <TextView
+        android:id="@+id/taskTimeSlot"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Time Slot: "
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:paddingBottom="5dp"
+        android:textColor="@color/primaryDark"/>
+
+    <!-- Selected Course -->
+    <TextView
+        android:id="@+id/taskCourse"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Course: "
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:paddingBottom="10dp"
+        android:textColor="@color/primaryDark"/>
 
     <!-- Task Title -->
     <com.google.android.material.textfield.TextInputLayout
